Adicionando grid de imagens ao projeto

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,3 +10,26 @@
 body {
   background: #F2F4F6;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #794BC3; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #5b27af; 
+}
+
+
